# fl-web-service

./: .env.example  .gitignore  README.md  alembic.ini  nodes.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 206bb5df3327_initial_users_and_client_tokens.py  29aaf6a75dd1_add_project_test_dataset_fields.py  4600d2ec79c8_add_projects_client_tokens_project_id_.py  678e1d678a82_add_project_summary.py  c1b8a4e7d3f0_add_runs_table.py  d8e2b9f5c1a4_add_project_inference_fields.py  e7f3a9d2b015_trained_models_registry.py
backend/: README.md  config.py  db.py  main.py
backend/auth/: deps.py  models.py  router.py  schemas.py  security.py  service.py
backend/clients/: agent_router.py  models.py  router.py  schemas.py  service.py
backend/inference/: datasets.py  router.py  service.py
backend/projects/: dataset_analyzer.py  deps.py  models.py  router.py  schemas.py  service.py
backend/runs/: models.py  orchestrator.py  router.py  schemas.py  service.py
backend/superlink/: manager.py
backend/trained_models/: models.py  router.py  schemas.py  service.py
client/: Dockerfile  README.md
client/fl_client/: __main__.py
deploy/: README.md  docker-compose.dev.yml
docs/: README.md  integration_contract.md  integration_response.md
fl_app/: client_app.py  data.py  profiling.py  pyproject.toml  server_app.py  training.py
fl_app/fl_app/: client_app.py  data.py  make_partitions.py  profiling.py  scheduler.py  server_app.py  strategies.py  training.py
fl_app/fl_app/models/cifar100/: __init__.py  se_resnet.py  wrn.py
fl_app/fl_app/models/plantvillage/: __init__.py
fl_app/models/: __init__.py
fl_app/models/plantvillage/: efficientnet.py  mobilenet.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/sample-experiment/: class_accuracy.csv  clients.csv  rounds.csv  schedule.json  summary.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  clientTokens.ts  flModels.ts  flStrategies.ts  inference.ts  projects.ts  runs.ts  sampleExperiment.ts  stragglerConfig.ts  trainedModels.ts  types.ts
frontend/src/api/__tests__/: flStrategies.test.ts
frontend/src/auth/: AuthContext.tsx  useAuth.ts
frontend/src/components/: InferencePlayground.tsx  Navbar.tsx  ProjectFormModal.tsx  ProtectedRoute.tsx  SliderInput.tsx
frontend/src/components/training/: TrainingDashboard.tsx
frontend/src/pages/: LandingPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  TokensPage.tsx
scripts/: convert_partitions_to_imagefolder.py  deploy_clients.sh  deploy_data.sh  install_docker_clients.sh  make_admin.py  patch_flwr_object_store.py  teardown_clients.sh
tests/: conftest.py  test_auth.py  test_client_tokens.py  test_health.py  test_heartbeat.py  test_projects.py  test_runs_config.py  test_runs_smoke.py
